--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "old_lint": "yarn lint:js",
     "lint": "eslint --fix --ext .js --ext .vue ./",
     "beauty": "prettier --ignore-path .gitignore --config ./.prettierrc.yaml --write \"**/*.{js,bue,vue,css,less}\""
   },
@@ -18,7 +16,8 @@
     "cross-env": "^7.0.3",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "require-directory": "^2.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.3",
@@ -35,11 +34,7 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.7.0",
+    "koa-router": "^10.0.0",
     "prettier": "^2.2.1"
-  },
-  "config": {
-    "nuxt": {
-      "port": "9500"
-    }
   }
 }
